--- a/css/burnpop.css
+++ b/css/burnpop.css
@@ -30,6 +30,7 @@
 
 .burnpops
 {
+	background-color: rgba(255,255,255,0.1);
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -59,7 +60,7 @@
 {
 	position: absolute;
 	margin: auto;
-	left: 0;
+	right: 0;
 	top: 0;
 	&:before
 	{
