--- a/css/burnpop.css
+++ b/css/burnpop.css
@@ -30,7 +30,7 @@
 
 .burnpops
 {
-	background-color: rgba(255,255,255,0.1);
+	background-color: rgba(0,0,0,0.5);
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -73,4 +73,8 @@
 .burnup.active
 {
 	display: block;
+}
+.burnimg
+{
+	display: none;
 }
